--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@ body {
 <p> ㅤㅤ </p>
 
 <div>
-<img src="e-waste-batteries.jpg" alt="Example of E-Waste" width="300" height="200">
-<img src="e-waste-a-technology-driven.jpg" alt="Example of E-Waste" width="300" height="200">
-<p> <i> A photo of E-Waste pollution </i> </p>
+<img src="white.png" alt="Example of E-Waste" width="300" height="150">
+<p> <i> Reuse <b>IT</b> logo </i> </p>
 </div>
 
 </div>
