--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
 
 <p> <b> Electronic waste, </b> or <b> e-waste, </b> is a growing problem in the world. With the rapid advancement of technology, people are constantly upgrading to newer and better electronics,  </p>
 
-<p> This leaves a lot of old electronics to be disposed of. Unfortunately, many of these old electronics end up in landfills, where they release harmful toxins into the environment. </p>
+<p> which leaves a lot of old electronics to be disposed of. Unfortunately, many of these old electronics end up in landfills, where they release harmful toxins into the environment. </p>
 
 <p> There are a few things you can do to prevent your old electronics from ending up in a landfill. </p>
 
