--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
 
 <p> <b> Electronic waste, </b> or <b> e-waste, </b> is a growing problem in the world. With the rapid advancement of technology, people are constantly upgrading to newer and better electronics,  </p>
 
-<p> which leaves a lot of old electronics to be disposed of. Unfortunately, many of these old electronics end up in landfills, where they release harmful toxins into the environment. </p>
+<p> This leaves a lot of old electronics to be disposed of. Unfortunately, many of these old electronics end up in landfills, where they release harmful toxins into the environment. </p>
 
 <p> There are a few things you can do to prevent your old electronics from ending up in a landfill. </p>
 
@@ -56,8 +56,8 @@ body {
 <p> ㅤㅤ </p>
 
 <div>
-<img src="white.png" alt="Example of E-Waste" width="300" height="150">
-<p> <i> Reuse <b>IT</b> logo </i> </p>
+<img src="white.png" alt="Reuse IT Logo" width="300" height="150">
+<p> <i> Reuse <b>IT</b> Logo </i> </p>
 </div>
 
 </div>
