--- a/charities.html
+++ b/charities.html
@@ -24,7 +24,7 @@ body {
 <p> ㅤㅤ </p>
 
 <div class="charitiestopbanner" style="background-color:#7e4880;color:white;padding:1%;width:1000px">Reuse <b>IT</b> - <b>Charities</b></div>
-<div class="charitiesbottombanner" style="background-color:#663a68;color:white;padding:1%;width:1000px"><b><a href="./index.html" style="color:#3b3b3b">Home</a> <a href="./charities.html" style="color:white">Charities</a></b> <b><a href="./faq.html" style="color:#3b3b3b">FAQ</a></b> <b><a href="./store.html" style="color:#3b3b3b">Store</a></b></div>
+<div class="charitiesbottombanner" style="background-color:#663a68;color:white;padding:1%;width:1000px"><b><a href="./index.html" style="color:#3b3b3b">Home</a> <a href="./charities.html" style="color:white">Charities</a></b> <b><a href="./faq.html" style="color:#3b3b3b">FAQ</a></b> <b><a href="./geotrash.html" style="color:#3b3b3b">Geotrash</a></b> <b><a href="./store.html" style="color:#3b3b3b">Store</a></b></div>
 
 
 <p> ㅤㅤ </p>
