--- a/faq.html
+++ b/faq.html
@@ -24,7 +24,7 @@ body {
 <p> ㅤㅤ </p>
 
 <div class="faqtopbanner" style="background-color:#40b4e6;color:white;padding:1%;width:1000px">Reuse <b>IT</b> - <b>FAQ</b></div>
-<div class="faqbottombanner" style="background-color:#338fb7;color:white;padding:1%;width:1000px"><b><a href="./index.html" style="color:#545454">Home</a> <a href="./charities.html" style="color:#545454">Charities</a></b> <b><a href="./faq.html" style="color:white">FAQ</a></b> <b><a href="./store.html" style="color:#545454">Store</a></b></div>
+<div class="faqbottombanner" style="background-color:#338fb7;color:white;padding:1%;width:1000px"><b><a href="./index.html" style="color:#545454">Home</a> <a href="./charities.html" style="color:#545454">Charities</a></b> <b><a href="./faq.html" style="color:white">FAQ</a></b> <b><a href="./geotrash.html" style="color:#545454">Geotrash</a></b> <b><a href="./store.html" style="color:#545454">Store</a></b></div>
 
 
 <p> ㅤㅤ </p>
