--- a/store.html
+++ b/store.html
@@ -25,7 +25,7 @@ body {
 <p> ㅤㅤ </p>
 
 <div class="storetopbanner" style="background-color:#5bcf9e;color:white;padding:1%;width:1000px">Reuse <b>IT</b> - <b>Store</b></div>
-<div class="storebottombanner" style="background-color:#3f8c6c;color:white;padding:1%;width:1000px"><b><a href="./index.html" style="color:#545454">Home</a> <a href="./charities.html" style="color:#545454">Charities</a></b> <b><a href="./faq.html" style="color:#545454">FAQ</a></b> <b><a href="./store.html" style="color:white">Store</a></b></div>
+<div class="storebottombanner" style="background-color:#3f8c6c;color:white;padding:1%;width:1000px"><b><a href="./index.html" style="color:#545454">Home</a> <a href="./charities.html" style="color:#545454">Charities</a></b> <b><a href="./faq.html" style="color:#545454">FAQ</a></b> <b><a href="./geotrash.html" style="color:#545454">Geotrash</a></b> <b><a href="./store.html" style="color:white">Store</a></b></div>
 
 <script type="text/javascript">
 
