--- a/index.html
+++ b/index.html
@@ -24,13 +24,17 @@ body {
 <p> ㅤㅤ </p>
 
 <div class="indextopbanner" style="background-color:#3cc928;color:white;padding:1%;width:1000px">Reuse <b>IT</b> - <b>Home</b></div>
-<div class="indexbottombanner" style="background-color:#34a823;color:white;padding:1%;width:1000px"><b><a href="./index.html" style="color:white">Home</a> <a href="./charities.html" style="color:#545454">Charities</a></b> <b><a href="./faq.html" style="color:#545454">FAQ</a></b> <b><a href="./store.html" style="color:#545454">Store</a></b></div>
+<div class="indexbottombanner" style="background-color:#34a823;color:white;padding:1%;width:1000px"><b><a href="./index.html" style="color:white">Home</a> <a href="./charities.html" style="color:#545454">Charities</a></b> <b><a href="./faq.html" style="color:#545454">FAQ</a></b> <b><a href="./geotrash.html" style="color:#545454">Geotrash</a></b> <b><a href="./store.html" style="color:#545454">Store</a></b></div>
+
+<p> ㅤㅤ </p>
+
+<p> We are Reuse <b>IT</b>. Our mission is to teach young people across the world how to properly dispose of their electronic waste in a way that appeals to everyone. </p>
 
 <p> ㅤㅤ </p>
 
 <p> <b> Electronic waste, </b> or <b> e-waste, </b> is a growing problem in the world. With the rapid advancement of technology, people are constantly upgrading to newer and better electronics,  </p>
 
-<p> This leaves a lot of old electronics to be disposed of. Unfortunately, many of these old electronics end up in landfills, where they release harmful toxins into the environment. </p>
+<p> which leaves a lot of old electronics to be disposed of. Unfortunately, many of these old electronics end up in landfills, where they release harmful toxins into the environment. </p>
 
 <p> There are a few things you can do to prevent your old electronics from ending up in a landfill. </p>
 
@@ -56,8 +60,8 @@ body {
 <p> ㅤㅤ </p>
 
 <div>
-<img src="white.png" alt="Reuse IT Logo" width="300" height="150">
-<p> <i> Reuse <b>IT</b> Logo </i> </p>
+<img src="white.png" alt="Example of E-Waste" width="300" height="150">
+<p> <i> Reuse <b>IT</b> logo </i> </p>
 </div>
 
 </div>
