--- a/geotrash.html
+++ b/geotrash.html
@@ -55,7 +55,7 @@ body {
 <p> Geotrash will be available for free on <b> iOS </b> and <b> Android. </b> </p>
 
 <p> ㅤㅤ </p>
-<img src="C:\Users\50040468\OneDrive - SERC\Desktop\Website\badge-pre-order-on-the-app-store.svg">
+<img src="./badge-pre-order-on-the-app-store.svg">
 <p> ㅤㅤ </p>
 
 <button onclick="myFunction()" id="demo">How we verify trash collected</button>
