--- a/geotrash.html
+++ b/geotrash.html
@@ -58,7 +58,7 @@ body {
 
 <button onclick="myFunction4()" id="demo4">Advanced FAQ</button>
 
-<button onclick="myFunction()" id="demo">Verifying trash collection</button>
+<button onclick="myFunction()" id="demo">How do we verify someone's trash collection?</button>
 
 <div id="text"><p>This is a difficult process, as someone could theoretically upload a picture of the same trash repeatedly.</p>
 <p> Our approach is to take the images that are uploaded and publicise them to local players so they can verify them. The incentive to verify images is levelling up. </p>
@@ -85,7 +85,7 @@ function myFunction() {
 
 <p> ㅤㅤ </p>
 
-<button onclick="myFunction2()" id="demo2">Rewards</button>
+<button onclick="myFunction2()" id="demo2">What rewards will be offered to players?</button>
 
 <div id="text2"><p>Initially, we aim to reach deals with large retailers and small businesses alike to give our players discounts and gift cards on products. </p> </div>
 
@@ -121,7 +121,7 @@ function myFunction3() {
 
 <p> ㅤㅤ </p>
 
-<button onclick="myFunction3()" id="demo3">Monetization</button>
+<button onclick="myFunction3()" id="demo3">How can this game be monetized?</button>
 
 <div id="text3"><p>We expect Geotrash to be a highly monetizable game - in the sense that we will be approaching companies directly to make deals with them</p>
 <p>for our playerbase. If our conversion rate is high, then we will have a platform where advertisers will strive to put their products on. </p>
