--- a/geotrash.html
+++ b/geotrash.html
@@ -126,7 +126,7 @@ function myFunction3() {
 <div id="text3"><p>We expect Geotrash to be a highly monetizable game - in the sense that we will be approaching companies directly to make deals with them</p>
 <p>for our playerbase. If our conversion rate is high, then we will have a platform where advertisers will strive to put their products on. </p>
 <p>Additionally, we plan for microtransactions and in-game advertisements to be a source of revenue.</p> 
-<p>If Geotrash achieves a large playerbase, then we expect it to generate a large amount of revenue and to minimise the amount of litter in large cities.</div>
+<p>If Geotrash achieves a large playerbase, then we expect it to generate a large amount of revenue and to minimise the amount of litter - especially in large cities.</div>
 
 <style>
 #text2 {
